2000-06-07  Alexander Kirillov  <kirillov@math.sunysb.edu>

	* help/C/panel.sgml: split section "adding panels" into 2,
	creating a new section "panel types". Added a note that push/free
	modes do not work for floating/sliding/aligned panels.

2000-06-06  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>

	* panel.hints: Add Japanese translations.

Thu Jun 01 00:51:36 2000  George Lebl <jirka@5z.com>

	* foobar-widget.c: increase the buffer size for strftime, and make
	  it handle failiure without segging.

Tue May 30 03:11:45 2000  George Lebl <jirka@5z.com>

	* button-widget.c: fix a check for an empty file in load_pixmap
	  which would segfault on a NULL filename.  Dunno when this would
	  happen but it definately happened in bug #12600

Tue May 30 03:01:43 2000  George Lebl <jirka@5z.com>

	* basep-widget.c: drawers are always in the "DOCK" layer.  even if
	  we keep panels below windows.  Having the drawers be below windows
	  makes no sense.

Sat May 27 16:49:33 2000  George Lebl <jirka@5z.com>

	* applet.c: when removing an applet, kill the applet in an idle.
	  This is so that events are processed and when a "destroy" happens
	  on the menu it happens before it is finalized by killing the
	  applet.  Fixes the flurry of recent bugs with 1.2.

2000-05-23  Dan Mueth <d-mueth@uchicago.edu>

	* panel.hints: Fixed typo in ending tag: </Content> was </content>.
	This completely broke the panel.hints file, so gnome-hint only
	would show the one hint hard-coded into gnome-hint.c. 

2000-05-23  Jacob Berkman  <jacob@helixcode.com>

	* panel.c (panel_destroy): don't go into the unexplored territory
	that is the negative ref count.  Wait for GTK 1.4 for that.

	* basep-widget.c (basep_widget_destroy): make this a little less
	ugly

2000-05-22  Fellmann Joaquim <joaquim@hrnet.fr>

	* panel.hints: Updated French translations.

2000-05-21  Dan Mueth <d-mueth@uchicago.edu>

	* panel.hints: Updated URL references to refer to new www.gnome.org