@@ -24,6 +24,7 @@
 #define __GNOME_RUN_H__
 
 void show_run_dialog (void);
+void show_run_dialog_with_text (const char *text);
 
 void load_run_applet(PanelWidget *panel, int pos, gboolean exactpos);
 
