@@ -1,3 +1,8 @@
+Thu Jun 08 17:04:02 2000  George Lebl <jirka@5z.com>
+
+	* gnome-run.[ch], menu.c: new useless feature of the week.  You can
+	  now put the Exec string from a menu item into the gnome-run dialog.
+
 2000-06-07  Alexander Kirillov  <kirillov@math.sunysb.edu>
 
 	* help/C/panel.sgml: split section "adding panels" into 2,
